# Vulkan-ReSTIR-PT

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
cmake/: FindVulkan.cmake
ext/: .CMakeLists.txt.swp  CMakeLists.txt
src/: .CMakeLists.txt.swp  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Command.cpp  Command.h  ComputeRayTrace.cpp  ComputeRayTrace.h  Context.cpp  Context.h  DIReSTIR.cpp  DIReSTIR.h  Descriptor.cpp  Descriptor.h  GBufferPass.cpp  GBufferPass.h  GIReSTIR.cpp  GIReSTIR.h  GRISReSTIR.cpp  GRISReSTIR.h  GUIManager.cpp  GUIManager.h  HostImage.cpp  HostImage.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Memory.cpp  Memory.h  Model.cpp  Model.h  NaiveDIPass.cpp  NaiveDIPass.h  NaiveDirectIllumination.cpp  NaiveDirectIllumination.h  (+57 more)
src/core/: AccelerationStructure.cpp  AccelerationStructure.h  Alignment.h  Command.cpp  Command.h  Context.cpp  Context.h  DebugUtils.cpp  DebugUtils.h  Descriptor.cpp  Descriptor.h  ExtFunctions.cpp  ExtFunctions.h  Instance.cpp  Instance.h  Memory.cpp  Memory.h  ShaderBindingTable.cpp  ShaderBindingTable.h  ShaderManager.cpp  ShaderManager.h  Swapchain.cpp  Swapchain.h  VkExtFunctions.cpp  VkExtFunctions.h
src/shader/: GBuffer.frag  GBuffer.vert  HostDevice.h  as_visualize.comp  camera.glsl  di_naive.comp  di_naive.glsl  di_naive.rgen  di_path_gen.comp  di_path_gen.glsl  di_path_gen.rgen  di_resample_temporal.comp  di_resample_temporal.glsl  di_resample_temporal.rgen  di_reservoir.glsl  di_spatial.comp  di_spatial.glsl  di_spatial.rgen  di_temporal.comp  di_temporal.glsl  di_temporal.rgen  full_naive_ray_query.comp  gBufferUtil.glsl  gbuffer_util.glsl  gi_naive.comp  gi_naive.glsl  gi_naive.rgen  gi_resample_temporal.comp  gi_resample_temporal.glsl  gi_resample_temporal.rgen  gi_reservoir.glsl  gris_mis_weight.comp  gris_path_trace.comp  gris_path_trace.comp.spvasm  gris_path_trace.glsl  gris_path_trace.rgen  gris_resample_spatial.comp  gris_resample_spatial.glsl  gris_resample_temporal.comp  gris_resample_temporal.glsl  (+38 more)
src/util/: AliasTable.h  Alignment.h  EnumBitField.h  Error.h  Math.h  Timer.h
zvk/: CMakeLists.txt  zvk.h  zvk.hpp
zvk/core/: AccelerationStructure.cpp  Alignment.h  Command.cpp  Command.h  ComputePipeline.cpp  ComputePipeline.h  Context.cpp  Context.h  DebugMessenger.cpp  DebugMessenger.h  DebugUtils.h  Descriptor.cpp  Descriptor.h  ExtFunctions.cpp  ExtFunctions.h  HostImage.cpp  HostImage.h  Instance.cpp  Instance.h  Memory.cpp  Memory.h  ShaderBindingTable.cpp  ShaderManager.cpp  Swapchain.cpp  Swapchain.h  VkDebugLayers.h
